Update existing tests to use scripted plugin