@@ -9,3 +9,7 @@ organization := "com.github.sbt"
 scalaVersion        := "2.10.2"
 
 crossScalaVersions  := Seq("2.9.2", "2.10.0", "2.10.2")
+
+scriptedSettings
+
+scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dproject.version=" + version.value)
